--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,25 +68,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.838">
 
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="102dp"
-            android:layout_height="79dp"
-            android:background="#F7FDD200"
-            android:text="Motor Right"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.91"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.476" />
+
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btNotify"
             android:layout_width="102dp"
             android:layout_height="81dp"
             android:background="#F7FDD200"
-            android:text="Motor Left"
+            android:text="Notify!"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.071"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -95,17 +84,29 @@
             app:layout_constraintVertical_bias="0.473" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/buttonOn"
             android:layout_width="102dp"
             android:layout_height="80dp"
             android:background="#F7FDD200"
-            android:text="Light off"
+            android:text="LED ON"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.45" />
+        <Button
+            android:id="@+id/buttonOff"
+            android:layout_width="102dp"
+            android:layout_height="79dp"
+            android:background="#F7FDD200"
+            android:text="LED OFF"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.91"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.476" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
